# MADS-ML-Nicky

./: .pdm-python  Makefile  README.md  mlflow.db  pyproject.toml
MADS_ML_Nicky/: dataset.py  excercises_les1.py  main.py
eeg/20240604-151209/: events.out.tfevents.1717506729.VRMWB-16GGJX3.161700.0
eeg/20240604-151254/: events.out.tfevents.1717506774.VRMWB-16GGJX3.162138.0
eeg/20240604-151315/: events.out.tfevents.1717506795.VRMWB-16GGJX3.162376.0
eeg/20240604-151353/: events.out.tfevents.1717506834.VRMWB-16GGJX3.162795.0  saved_config.gin
eeg/20240604-151419/: events.out.tfevents.1717506859.VRMWB-16GGJX3.163071.0
eeg/20240604-151453/: events.out.tfevents.1717506894.VRMWB-16GGJX3.163416.0
eeg/20240604-151531/: events.out.tfevents.1717506932.VRMWB-16GGJX3.163798.0
eeg/20240604-151601/: events.out.tfevents.1717506961.VRMWB-16GGJX3.164105.0
eeg/20240604-151625/: events.out.tfevents.1717506986.VRMWB-16GGJX3.164373.0
eeg/20240604-151645/: events.out.tfevents.1717507006.VRMWB-16GGJX3.164611.0
eeg/20240604-151735/: events.out.tfevents.1717507056.VRMWB-16GGJX3.165107.0
eeg/20240604-151823/: events.out.tfevents.1717507103.VRMWB-16GGJX3.165557.0
eeg/20240604-151858/: events.out.tfevents.1717507139.VRMWB-16GGJX3.165929.0
eeg/20240604-151929/: events.out.tfevents.1717507170.VRMWB-16GGJX3.166245.0
eeg/20240604-152039/: events.out.tfevents.1717507239.VRMWB-16GGJX3.166894.0
eeg/20240604-152107/: events.out.tfevents.1717507267.VRMWB-16GGJX3.167202.0
eeg/20240604-152631/: events.out.tfevents.1717507592.VRMWB-16GGJX3.169887.0
(+472 files in other folders)
