
[project]
name = "MADS-ML-Nicky"
version = "0.1.0"
description = ""
authors = [
	{name = "", email = ""},
]
dependencies = [
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
lint = [
	"ruff>=0.0.278",
	"black>=23.7.0",
	"isort>=5.12.0",
	"mypy>=1.4.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
